[gd_scene load_steps=13 format=3 uid="uid://b4xrfoj2eamff"]

[ext_resource type="Script" path="res://scenes/character.gd" id="1_2vm8d"]
[ext_resource type="Texture2D" uid="uid://e3opu1kwb5nn" path="res://graphics/BlcharSprite.png" id="2_qc1ek"]
[ext_resource type="Script" path="res://components/tile_collision_checker.gd" id="4_4xil6"]
[ext_resource type="Script" path="res://components/character_collision_checker.gd" id="4_e5421"]

[sub_resource type="Animation" id="Animation_n2tes"]
resource_name = "Hop"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAnchor/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(0.25, 2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteAnchor/Shadow:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(0.25, 2, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.498039), Color(0, 0, 0, 0.247059), Color(0, 0, 0, 0.498039)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnchor/Shadow:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333),
"transitions": PackedFloat32Array(0.25, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.5, 0.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_x1v0s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAnchor/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteAnchor/Shadow:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.498039)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnchor/Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpriteAnchor/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_027np"]
resource_name = "Hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAnchor/Sprite2D:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 0.25, 0.25, 1), Color(1, 1, 1, 1), Color(1, 0.25, 0.25, 1), Color(1, 1, 1, 1), Color(1, 0.25, 0.25, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vd5sa"]
_data = {
"Hop": SubResource("Animation_n2tes"),
"Hurt": SubResource("Animation_027np"),
"RESET": SubResource("Animation_x1v0s")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8yjdt"]
animation = &"Hop"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_tbhow"]
filters = ["SpriteAnchor/Shadow:color", "SpriteAnchor/Shadow:scale", "SpriteAnchor/Sprite2D:modulate", "SpriteAnchor/Sprite2D:position"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ofyfg"]
animation = &"Hurt"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_l2oko"]
graph_offset = Vector2(-237, 57)
nodes/Hop/node = SubResource("AnimationNodeAnimation_8yjdt")
nodes/Hop/position = Vector2(220, 60)
nodes/HopHurt/node = SubResource("AnimationNodeBlend2_tbhow")
nodes/HopHurt/position = Vector2(440, 100)
nodes/Hurt/node = SubResource("AnimationNodeAnimation_ofyfg")
nodes/Hurt/position = Vector2(220, 220)
nodes/output/position = Vector2(640, 120)
node_connections = [&"HopHurt", 0, &"Hop", &"HopHurt", 1, &"Hurt", &"output", 0, &"HopHurt"]

[node name="Character" type="Node2D"]
script = ExtResource("1_2vm8d")
sprite_texture = ExtResource("2_qc1ek")

[node name="TileCollisionChecker" type="Node" parent="."]
script = ExtResource("4_4xil6")

[node name="CharacterCollisionChecker" type="Node" parent="."]
script = ExtResource("4_e5421")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vd5sa")
}

[node name="SpriteAnchor" type="Node2D" parent="."]
position = Vector2(0, -5)

[node name="Shadow" type="Polygon2D" parent="SpriteAnchor"]
position = Vector2(0, 8)
color = Color(0, 0, 0, 0.498039)
polygon = PackedVector2Array(0, -2, 4, -1, 5, 0, 4, 1, 0, 2, -4, 1, -5, 0, -4, -1)

[node name="Sprite2D" type="Sprite2D" parent="SpriteAnchor"]
texture_filter = 1
texture = ExtResource("2_qc1ek")
hframes = 4
region_rect = Rect2(0, 0, 16, 16)

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_l2oko")
anim_player = NodePath("../AnimationPlayer")
parameters/HopHurt/blend_amount = 1.0
